k8s-learn/nginx.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: k8s-learn

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
          - containerPort: 80
