k8s-learn/nginx-service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: k8s-learn
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
